	32bit integer everywhere, so that atomic operations operate on the
	correct value on big endian CPUs with different word sizes.
	* Source/NSOperation.m: When starting an operation, have it retain
	itself in case it'ss removed from the queue and released while
	running.
	* Headers/Foundation/NSDistributedLock.h: Add lock ivar.
	* Source/NSDistributedLock.m: Make class thread-safe using lock.

2016-06-19  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/cifframe.m: Use sizeof(NSInteger) as the buffer size for
	small scalars if we are on an LP64 machine.
	* Source/NSOperation.m: Retain operation while taking it from queue,
	releasing after it is finished.  Prevent crash if the original owner
	of the operation releases it while it's in the queue.

2016-06-17  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSHTTPURLHandle.m:
	* Source/NSURLprotocol.m:
	When sending HTTP headers, use RFC2047 rules (as specified in HTTP/1.1
	RFC2616) to encode non-ascii characters.

2016-06-17  Niels Grewe <niels.grewe@halbordnung.de>

	* Headers/Foundation/NSRegularExpression.h
	* Source/NSRegularExpression.m
	* Tests/base/NSRegularExpression/basic.m:

	Implement resource limits for regular expression evaluation. Tweaked
	to roughly match the Cocoa behaviour, but can be changed through 
	the GSRegularExpressionWorkLimit user default.

2016-06-17  Niels Grewe <niels.grewe@halbordnung.de>

	* Source/NSRegularExpression.m: Implement -isEqual: and -hash
	* Tests/base/NSRegularExpression/basic.m: Test NSCopying

2016-06-14  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSSocketStream.m: Fix for failure of connect() call.
	* Source/GSStream.m: Fix event handling for failed streams.
	* Tests/NSURLConnection/test01.m: Add testcases, fix reset of delegate.
	Fixes for kfreebsd network stack being clever enough to fail the
	connect() call if the remote port is on the same machine and has
	no process listening on it.  Reported by Heintzmann

2016-06-08  Richard Frith-Macdonald <rfm@gnu.org>
